--- a/params/peephole_lstm_s.yaml
+++ b/params/peephole_lstm_s.yaml
@@ -1,14 +1,14 @@
-batch_size: 128
+batch_size: 16
 device: cpu
-epochs: 500
-hidden_dim: 256
+epochs: 200
+hidden_dim: 64
 input_dim: 1
 lookback: 10
 loss: L1
-lr: 0.001
-model: customlstm
-n_layers: 1
+lr: 0.01
+model: peepholelstm
+n_layers: 2
 optimizer: Adam
-patience: 50
+patience: 20
 output_dim: 1
 init_method: 'kaiming' # normal, kaiming, xavier, uniform
